@@ -134,7 +134,10 @@ namespace KJS {
         {
             return fastMalloc(size);
         }
-        void operator delete(void*);
+        void operator delete(void* p)
+        {
+            fastFree(p);
+        }
 
         void* operator new[](size_t);
         void operator delete[](void*);
